--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "in-n-out",
+  "name": "golden-gate-hours",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.0",
+    "@auth/prisma-adapter": "^2.7.0",
     "@prisma/client": "^5.0.0",
-    "@types/node": "^20.2.5",
+    "@types/node": "^22.7.5",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.41.0",
-    "eslint-config-next": "^13.4.4",
-    "next": "^13.4.5",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "^15.0.3",
+    "next": "^15.0.3",
     "next-auth": "^4.22.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0",
+    "react-icons": "^5.3.0",
     "react-outside-click-handler": "^1.3.0",
     "react-zxing": "^2.0.0",
     "tailwindcss": "^3.3.2",
@@ -33,7 +33,7 @@
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.0",
     "prettier-plugin-prisma": "^5.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "prisma": "^5.0.0"
   }
 }
